@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: conf.c,v 1.26 2004/09/16 20:13:36 dun Exp $
+ *  $Id: conf.c,v 1.27 2004/09/18 23:00:01 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -69,6 +69,13 @@ struct option opt_table[] = {
 };
 
 const char * const opt_string = "hLVfFS:";
+
+
+/*****************************************************************************
+ *  Global Variables
+ *****************************************************************************/
+
+conf_t conf = NULL;                     /* global configuration struct       */
 
 
 /*****************************************************************************
